--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body {
 </style>
 <center><font size="+5">TRepo</font></center>
 <p></p>
-<center><a href="#" class="addrepo">Add Repo!</a></center>
+<center><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://https://github.com/TRawww/TRepo" class="addrepo">Add Repo!</a></center>
 
 
 
