Made site scalable

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+</head>
 <body>
 <style>
 body {
@@ -35,7 +38,7 @@ body {
 </style>
 <center><font size="+5">TRepo</font></center>
 <p></p>
-<center><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://https://github.com/TRawww/TRepo" class="addrepo">Add Repo!</a></center>
+<center><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://trawww.github.io/TRepo/" class="addrepo">Add Repo!</a></center>
 
 
 
